@@ -12,8 +12,10 @@ DIST README-3.12.3.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae5
 DIST README-3.12.4.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST README-3.12.5.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST README-3.12.6.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
+DIST README-3.12.7.BFQ 10429 SHA256 f3aaab992fc09986bf10988df80f0110c753ef6a5ae58ee49981f57916c6ca70 SHA512 71ad309b8368d2c5eb23268831609e6cf7124337bc4fa6bf20ddf6e92840974e07af38faa62bfa6710ceb9d1cb7bb4c98712af74bd5ea455005cfa3e85a96245 WHIRLPOOL 4feaf29250aa5cca46cba80fe500760281a0c3ccec1bcf727bfc21ac83b2517190ad10b4a9d30c2cd2405a41e972007a3a4e2b058478ce5860392bc10521bf10
 DIST aufs-sources-3.10_p20131111.tar.xz 151456 SHA256 a5229c12e9cf62a04bc84458df88d4fdb3c4e30e38c184cd2e236b22efe01e6f SHA512 421ac913b40c66dab4ca01da1c08204d1ed78a93e4dba09795f0a081a1af5c30bd82863fafdd034defb840b7961e49713242549c2bbe4d8bddc4c81663b27ff0 WHIRLPOOL c215c4ca78409efe48dea1cae373b645452d16ee8711a00913b52c4796756e90960e3d4a61c0a2b1ddf693aee3e206401f6bf648f0d5af0404cda710ee3d8339
 DIST aufs-sources-3.12_p20131111.tar.xz 152124 SHA256 010b330230b3ce63a4b60b5f049fd3a225518891fce4ac2e4fbd73a02b15a271 SHA512 b34f1d9489748e82d6023ce4b89b87ed7fb4e3b62b99895424f00c241efdc24ff8ccc398ad0558933960fb0c68a61d2bd648d867e95a1ef9617119976422b2e1 WHIRLPOOL db938d8f50d8a5ecd60ddd26422ad851c0d22593b06d113057dec13df30bdb737d00bee888b86cf3c90673301355b6323d7368c7a195ac173be46b2f3411acf7
+DIST aufs-sources-3.12_p20131223.tar.xz 152016 SHA256 52d7b919bc92368eab57931b1def462198c4582eb0f0e28e9e84464612adf629 SHA512 315196b1a43a366728a3cdaa78abd8eb6f3e74b79c4edf8894de92c354f7e060211f020ca1f4d4a4e9dd41a3d399111eebcf2f8c658ac1457c73dc8bd971af29 WHIRLPOOL eceb04a1281944cd960b1a908d4cd2f8affbb36bb6ed3af5051396fd4fdfffc8f4442853e4ab84687519647ed1563b679a28c091eb2c19b27ab4e4f4d53909e4
 DIST deblob-3.10 117299 SHA256 d48cad04fab6a802b3a3e34955c8e35b539c2441f9a62522ec5a132c3a5ae684 SHA512 7b30f0f97ed97bf6b096d4a321b4b1e62f4b48f07972f2511870c3eaaf4f3877b0c6af2f30f6b985edf9c9c79267d40448b504c59016acfe06374630d1fdcba9 WHIRLPOOL 03a5963367cc6cb4f87e3d315ab61a8b3cb1fe577b20d7e2fb6ad83464075b3ed8176f543bb4c3b4e607d78cd55ef940f446bb75be09eb7496321930413ce2b9
 DIST deblob-3.12 120320 SHA256 1d767acd3f461bcaa7ebef744dce1ca3eefde1cd41fde4c69a449e2470ab8c0e SHA512 61073cb763e3e0c21a84c0ee888087fbbf37b667ce0efbbc6c2ebc46ccae8460553511e347cf23d3c3603eec64df738ad4552a1b527453c7d795b8f90c4cf678 WHIRLPOOL c64cc566944ac241149a2a517da069185830be5b8ee25168b2b6b942bcf24fe3f2c0fe487b51a5b7e73e2910af2cabd7167cd1497ab7272c865d1eb3e68e4efe
 DIST deblob-check-3.10 565672 SHA256 748df2cf5c1f012f9942948827e57b12bb05c569cae220416b3c0339520d9855 SHA512 341ea8a755c4f1f42ddbc4e7dfe8d786e8b29f497bee3fd72154c8c1c0bcadcb9efff04f2663090bd8741e5b5baafed26a62b9d16c31f3b31665cd3cd3e779d5 WHIRLPOOL 7e6c8eefa9b44e7d50011a9390baf7999533b4016122992c0ac0722cce05dbb8e4b7e96f1f05e9bfdd2ce3e4c08f0e06c8955b68ed8c044ff75f3a314a405824
@@ -34,6 +36,8 @@ DIST genpatches-3.12-6.base.tar.xz 162056 SHA256 7a20ec90f9e2be68b7677504209b39e
 DIST genpatches-3.12-6.extras.tar.xz 18128 SHA256 51b625d97db6b7e221bb77495095cd4501e2e8a20afa27549dd6fe818badc913 SHA512 852d56205ed82885f64f265b2978ed86c767d4c62527bb8fd376e8a1eb61af9b6c839a5dea1fb91bb0c8a5a1313c50bcadebb71129b38a52b0c5115714e0efa4 WHIRLPOOL 6afe1b3b0b45ad24e590495976ed80cef936e47ae863dbb36519c76799d7e7645d09801f4818ac96f737fa6bc3bd6424e5fe849b41438b3afb3e15a98c5c34a3
 DIST genpatches-3.12-7.base.tar.xz 195620 SHA256 00d27da9e21cee279cf4ed4d8b80adad291b4ed15ca9ac337b3c4bfbd9ee3a51 SHA512 7fe1651f0d3188ddc7987a5a133c8e612f1e9b319251d9ca3ae3a7dfd23a57bdc1117d1b4793072a3859cb1f631b6dac3902315326143f579260ff9c5639bd5e WHIRLPOOL 60f85a0d37ba59a4d9cb9355b9f176b650dea4b2f4fce4c285edec9bce34cd54f89e196393249523bf95653d69ab08444db4a3ed394dccd08fb800d5974fd6b7
 DIST genpatches-3.12-7.extras.tar.xz 18128 SHA256 51b625d97db6b7e221bb77495095cd4501e2e8a20afa27549dd6fe818badc913 SHA512 852d56205ed82885f64f265b2978ed86c767d4c62527bb8fd376e8a1eb61af9b6c839a5dea1fb91bb0c8a5a1313c50bcadebb71129b38a52b0c5115714e0efa4 WHIRLPOOL 6afe1b3b0b45ad24e590495976ed80cef936e47ae863dbb36519c76799d7e7645d09801f4818ac96f737fa6bc3bd6424e5fe849b41438b3afb3e15a98c5c34a3
+DIST genpatches-3.12-8.base.tar.xz 235944 SHA256 688ca01177f786e8a1f2d904ce52b99e8b87bbc0964e4b5b41b311032a9fd4d6 SHA512 6389485a4c5bc537b03e89266e9fb7d8cb5f7ab305d7c91f672cfb180dba74562a6e6f2ce99065a6d90eaa5caa79cd131f168d24f806e5ab3687e7de846dbe56 WHIRLPOOL baf4f0b15fec1f23e67c44b34c7c77ef377945f230f88e03d534d33090239519cacef40cff987cbb03323ea534d835423bc9c5abefe4cd7b1fb851cc1c2cad71
+DIST genpatches-3.12-8.extras.tar.xz 18148 SHA256 2f865fc797b96ca30ac437718bb8b9feef442d3ed99b61224d5dc496b5ac7f2c SHA512 a0851b94669e097b3493baa6625b052dd6ce6bf3b318ba62474b8d230526bbacd3751a99ea108b641dcab490129aa370327e8c971996db3afb088e3053f761ff WHIRLPOOL edea43599166eedc00a4254fd32930e21f082af64e067cfb2b8731016062ce132641ae3abbd30a321bddf66db6eabe026d979b98f1802c12c0ffc26f8b149eff
 DIST lh-logo_linux_320_240_clut224.ppm 58367 SHA256 9692bfdd2257ae5131ac14eb6f34386416ec228be68a4bb02381378876e34812 SHA512 18cd56961a81f4ca87933859a35d84af86602f480a6b92dbb3c2f4a9b83abb7023c64939bc781bbe7f9e8e105df508698a66790909f9144fb99c1e347ccf22de WHIRLPOOL 66933acfce018d07d9d70dbfd56155bb23f7fdccb2295c28100165d6c8c14194556bdadf66b119f42db1d700d1ce5bf2eeca17f44c26582bb13656d166c055e8
 DIST lh-sources-kernel-312-gcc48-1.patch 14066 SHA256 46c2f360ad3dd54648d81b69c438ec5a0f1b4bd2b873250f61a41fc01c1835fb SHA512 577132b6354ad385449316de045368f9ef3cc3129fc112fa41b869d328a0fe312dd956f674eced52459fb36e4f18087b03dddeb9572a2f7479cb858d0df37a6b WHIRLPOOL 7921e37cc602b6240b6c7587e4d90f934e320159eadb99c8974154a634c548a789ddd6e4b7abd7fdbb9bd85b82fda8efcf32023c732bf08d70f649cef5a12057
 DIST linux-3.10.tar.xz 73175088 SHA256 df27fa92d27a9c410bfe6c4a89f141638500d7eadcca5cce578954efc2ad3544 SHA512 5fb109fcbd59bf3dffc911b853894f0a84afa75151368f783a1252c5ff60c7a1504de216c0012be446df983e2dea400ad8eeed3ce04f24dc61d0ef76c174dc35 WHIRLPOOL e7c0ccc2231e430b831218fc66f1940d095d2d5447d391329c6a7373d4a1d16708f64778b32e4847802ee2dae4fcf7cb67a1238fd4eb204fd0c4bce2d8134053
